# asus-5606-ctl

./: .gitignore  README.md  dev.heggo.Asus5606ctl.json  dev.heggo.Asus5606ctl.policy  meson.build
src/: Commands.cpp  Commands.h  main.cpp  meson.build
src/UI/: Window.cpp  Window.h  main.ui  ui_resources.gresource.xml
